--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,9 +26,11 @@
 	<!-- My scripts -->
 	<script type="module" src="javascript/app.js"></script>
 	<script type="module" src="javascript/login.js"></script>
-	<script type="module" src="javascript/register.js"></script>
+	<script type="module" src="javascript/register.js?v=1.0.1"></script>
 	<script type="module" src="javascript/startgame.js"></script>
 	<script type="module" src="javascript/components/sidenav.js"></script>
+	<script type="module" src="javascript/components/loginCard.js"></script>
+	<script type="module" src="javascript/components/registerCard.js"></script>
 
 	<!-- Bootstrap Elements -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
