--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -1,65 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="card">
+	<div class="card-bg">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Register</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
-	<link href="../css/auth.css" rel="stylesheet">
-</head>
-
-<body>
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-md-6">
-				<div class="card">
-					<div class="card-bg">
-
-					</div>
-					<div>
-						<h2 class="text-center mt-4 fw-bold">
-							REGISTER
-						</h2>
-					</div>
-					<div class="card-body p-4">
-						<form id="registerForm">
-							<div class="mb-4">
-								<!-- <label for="username" class="form-label">Username</label> -->
-								<input type="text" class="form-control" id="username" placeholder="Enter your username"
-									required>
-							</div>
-							<div class="mb-4">
-								<!-- <label for="email" class="form-label">Email Address</label> -->
-								<input type="email" class="form-control" id="email" placeholder="Enter your email"
-									required>
-							</div>
-							<div class="mb-4">
-								<!-- <label for="password" class="form-label">Password</label> -->
-								<input type="password" class="form-control" id="password"
-									placeholder="Enter your password" required>
-							</div>
-							<div class="mb-4">
-								<!-- <label for="confirmPassword" class="form-label">Confirm Password</label> -->
-								<input type="password" class="form-control" id="confirmPassword"
-									placeholder="Confirm your password" required>
-							</div>
-							<div class="d-grid">
-								<button type="submit" class="btn btn-register">REGISTER</button>
-							</div>
-						</form>
-					</div>
-					<div class="card-footer text-secondary">
-						Already have an account? <a href="login.html">Sign In</a>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
-
-	<script src="../javascript/register.js" ></script>
-</body>
-
-</html>
+	<div>
+		<h2 class="text-center mt-4 fw-bold">
+			REGISTER
+		</h2>
+	</div>
+	<div class="card-body p-4">
+		<form id="registerForm" class="registerClass">
+			<div class="mb-4">
+				<!-- <label for="username" class="form-label">Username</label> -->
+				<input type="text" class="form-control" id="registerUsername" placeholder="Enter your username"
+					required>
+			</div>
+			<div class="mb-4">
+				<!-- <label for="email" class="form-label">Email Address</label> -->
+				<input type="email" class="form-control" id="registerEmail" placeholder="Enter your email"
+					required>
+			</div>
+			<div class="mb-4">
+				<!-- <label for="password" class="form-label">Password</label> -->
+				<input type="password" class="form-control" id="registerPassword"
+					placeholder="Enter your password" required>
+			</div>
+			<div class="mb-4">
+				<!-- <label for="confirmPassword" class="form-label">Confirm Password</label> -->
+				<input type="password" class="form-control" id="confirmPassword"
+					placeholder="Confirm your password" required>
+			</div>
+			<div class="d-grid">
+				<button type="submit" class="btn btn-register">REGISTER</button>
+			</div>
+		</form>
+	</div>
+	<div class="card-footer text-secondary">
+		Already have an account? <a href="#" data-bs-target="#loginMod" data-bs-toggle="modal" data-bs-dismiss="modal">Sign In<a>
+	</div>
+</div>
