--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -28,19 +28,23 @@
 					<input class="form-check-input" type="checkbox" id="enable2FA">
 					<label class="form-check-label" for="enable2FA">Enable</label>
 				</div>
+				<div id="choose2FaMehtod">
+					<!-- choose otp method -->
 
-				<div class="mb-4">
-					<label for="twoFaMethod" class="form-label">Choose 2FA Method:</label>
-					<select id="twoFaMethod" class="form-select" required>
-						<option value="sms">SMS</option>
-						<option value="email">Email</option>
-						<option value="totp">Authenticator App</option>
-					</select>
+					<div class="mb-4">
+						<label for="twoFaMethod" class="form-label">Choose 2FA Method:</label>
+						<select id="twoFaMethod" class="form-select" required>
+							<option value="sms">SMS</option>
+							<option value="email">Email</option>
+							<option value="totp">Authenticator App</option>
+						</select>
+					</div>
+
+					<button class="btn btn-primary" id="save" data-bs-toggle="modal" data-bs-target="#saveOtpMode">
+						Save
+					</button>
+
 				</div>
-
-				<button class="btn btn-primary" id="save" data-bs-toggle="modal" data-bs-target="#saveOtpMode">
-					Save
-				</button>
 			</div>
 			<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
 			<div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
@@ -54,13 +58,13 @@
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 			<div class="row justify-content-end">
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				<button type="button" class="btn-close" id="closeBtn" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-12">
-							<div class="card">
+							<div class="card" id="otpCard">
 								<div class="bg-dark pt-3">
 									<p class="fw-bolder ms-2">Two Factory Authentication</p>
 								</div>
@@ -76,11 +80,11 @@
 									</div>
 								</div>
 								<br/>
-								<div class="text-center row justify-content-center mb-4">
+								<div class="text-center row justify-content-center mb-4" id="otpInput">
 									<label id="otpInputLabel" for="otpCode"></label></small></p>
-									<input class="form-control text-dark bg-light w-50" type="password" id="otpCode" placeholder="OTP Code" name="otpCode" required>
+									<input class="form-control text-dark bg-light w-50" type="text" id="otpCode" placeholder="OTP Code" name="otpCode" required>
 								</div>
-								<div class="bg-dark text-dark p-3 d-flex justify-content-end">
+								<div class="bg-dark text-dark p-3 d-flex justify-content-end" id="otpButtons">
 									<button type="button" class="btn btn-secondary rounded-3 mx-2" data-bs-dismiss="modal">Cancel</button>
 									<button type="button" class="btn btn-success rounded-3" id="verifyOTP">Verify</button>
 								</div>
