--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,26 +30,40 @@
 			<!-- App load -->
 		</div>
 
-		<div id="chatIcon" class="bg-primary text-white p-3 rounded-circle">
-			<i class="bi bi-chat-dots-fill fs-3"></i>
+		<div id="chatIcon" class="text-white p-3 fw-bold">
+			<!-- <i class="bi bi-chat-dots-fill fs-3"></i> -->
+			<i class="fa-solid fa-envelope fa-2x"></i>
+			<span class="fs-5 chat-text">Chat</span>
 		</div>
 
 		<!-- Chat Box -->
 		<div id="chatBox">
+			<!-- Chat Header -->
 			<div id="chatBoxHeader" class="d-flex justify-content-between align-items-center">
-				<span>Chat Support</span>
+				<span id="messageTo"># pong-chat</span>
 				<button id="closeChat" class="btn-close btn-close-white"></button>
 			</div>
 		
+			<!-- Chat Messages -->
 			<div id="chatMessages">
 				<div id="messages" class="text-muted text-center">No messages yet...</div>
 			</div>
 		
-			<div class="input-group">
-				<input type="text" id="chatInput" class="form-control" placeholder="Type your message...">
-				<button id="sendButton" class="btn btn-primary">Send</button>
+			<!-- Input Area -->
+			<div id="chatInputArea">
+				<form id="chatForm">
+					<textarea id="chatInput" placeholder="Message #ot-games"></textarea>
+					<button type="submit" id="sendButton">Send</button>
+				</form>
+			</div>
+			
+		
+			<!-- Invite Button -->
+			<div id="inviteContainer">
+				<button id="inviteButton">🎮 Invite a Player</button>
 			</div>
 		</div>
+		
 	</div>
 
 	<!-- My scripts -->
