--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-shrink-0 text-white sidenav text-warning
-	position-sticky top-0 vh-100 p-3" style="width: 250px;">
+	position-sticky top-0 vh-100 p-3" style="width: 240px;">
 	<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none fw-bold">
 		<i class="fa-solid fa-table-tennis-paddle-ball fa-2x" style="padding-right: 8px;"></i>
 		<span class="fs-3">Ping Pong</span>
@@ -9,12 +9,12 @@
 
 		<ul class="nav nav-pills flex-column mb-auto d-flex flex-column ul1" id="navlist">
 			<li class="nav-item flex-grow-1">
-				<a href="/" class="nav-link active fw-bolder" aria-current="page" data-link>
+				<a href="/" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-house"></i>
 					Home
 				</a>
 			</li>
-			<li class="nav-item flex-grow-1">
+			<!-- <li class="nav-item flex-grow-1">
 				<a href="/dashboard" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-gauge"></i>
 					Dashboard
@@ -25,7 +25,7 @@
 					<i class="fa-solid fa-ranking-star"></i>
 					Leaderboard
 				</a>
-			</li>
+			</li> -->
 			<li class="nav-item">
 				<a href="/tournaments" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-trophy"></i>
@@ -53,12 +53,6 @@
 		</ul>
 		
 		<ul class="nav nav-pills flex-column ul2">
-			<li class="nav-item mb-auto">
-				<a href="#" class="nav-link text-white fw-bolder" data-link>
-					<i class="fa-solid fa-moon"></i>
-					Dark Mode
-				</a>
-			</li>
 			<li class="nav-item">
 				<button class="btn text-white fw-bolder logoutbtn" id="logoutBtn">
 					<i class="fa-solid fa-right-from-bracket"></i>
