--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -75,13 +75,12 @@
 			<strong id="loggedUserName">user</strong>
 			</a>
 			<ul class="dropdown-menu dropdown-menu-dark text-small shadow ul3" aria-labelledby="user1">
-				<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
-				<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
+				<li><a class="dropdown-item" href="/settings" data-link>Settings</a></li>
 				<li><a class="dropdown-item profile" href="/profile" data-link>Profile</a></li>
 				<li>
 					<hr class="dropdown-divider">
 				</li>
-				<li><a class="dropdown-item" href="#">Sign out</a></li>
+				<!-- <li><a class="dropdown-item" href="#">Sign out</a></li> -->
 			</ul>
 		</div>
 	<!-- </div> -->
